# pydantic-circular-references-repro

./: README.md  pyproject.toml
src/: main.py
src/circular_pydantic_models/: bar.py  baz.py  foo.py
